may fix visibility

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ h6,
     background: url("../img/404.png") repeat scroll center center transparent;
     content: '';
     display: block;
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
     bottom: 0;
